# monday-qbr-copilot

./: .env.example  .gitignore  README.md  vercel.json
backend/: main.py  pyproject.toml
backend/app/: factory.py  main.py
backend/app/agents/: __init__.py  brand_guardrails.py  csm_judge.py  editor.py  graph.py  llm.py  qual_agent.py  quant_agent.py  refiner.py  schemas.py  state.py  strategist.py
backend/app/data/: __init__.py  loader.py  upload_store.py
backend/app/models/: __init__.py  api.py  customer.py
backend/app/prompt_templates/: __init__.py  editor.py  judge.py  qual.py  quant.py  refiner.py  strategist.py
backend/app/routes/: __init__.py  accounts.py  export.py  qbr.py  upload.py
backend/app/services/: pdf_export.py
backend/tests/: test_agent_framework.py  test_backend_api.py  test_data_loader.py
docs/: AI Innovation Builder — Home Task.docx  CSM_QBR_CoPilot_Refinements.md  Monday_QBR_CoPilot_Plan.md  backend_architecture.md  design_brief.md  experiment_reflection.md  prompts_documentation.md  sample_customers_q3_2025.xlsx
frontend/: next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  (+1 more)
scripts/: generate_experiment_reflection_html.mjs  generate_submission_html.mjs
tmp/pdfs/: design_brief.html  experiment_reflection.html  flow_architecture_diagram.html  prompts_components_documentation.html
work_states/: 00_infrastructure.md  01_data_layer.md  02_agent_framework.md  03_backend_api.md  04_frontend.md  05_deployment.md  06_documentation.md  07_deliverables.md  08_csm_refinements.md  _template.md
(+18 files in other folders)
